--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -1,6 +1,34 @@
 {
-    "welcome": "Welcome to our website!",
-    "aboutUs": "About Us",
-    "services": "Services",
-    "contactUs": "Contact Us"
-}
+    "about": "حول",
+    "board_of_directors": "مجلس الإدارة",
+    "management": "الإدارة",
+    "executive": "التنفيذي",
+    "govt_bots": "البوتات الحكومية",
+    "services": "الخدمات",
+    "corporate_governance": "حوكمة الشركات",
+    "investor_relations": "علاقات المستثمرين",
+    "annual_report": "التقرير السنوي",
+    "disclosures": "الإفصاحات",
+    "financial_statement": "البيان المالي",
+    "info_center": "مركز المعلومات",
+    "latest_news": "أحدث الأخبار",
+    "careers": "الوظائف",
+    "complaints": "الشكاوى",
+    "report_incident": "الإبلاغ عن حادثة",
+    "contact": "تواصل",
+    "search_properties": "البحث عن العقارات",
+    "pay_rent": "دفع الإيجار",
+    "information_center": "مركز المعلومات",
+    "complaints_suggestions": "الشكاوى والاقتراحات",
+    "quick_links": "روابط سريعة",
+    "pay_rent_online": "دفع الإيجار عبر الإنترنت",
+    "government_bots": "البوتات الحكومية",
+    "location": "الموقع",
+    "phone": "هاتف",
+    "email": "البريد الإلكتروني",
+    "address": "شارع عبد الله المبارك، برج الإنماء، مدينة الكويت",
+    "follow_us": "تابعنا على:",
+    "copyright_text": "حقوق النشر © 2024 شركة الإنماء العقارية. جميع الحقوق محفوظة | مدعوم من حلول أناثوث لتكنولوجيا المعلومات",
+    "company_description": "تم تسجيل ودمج شركة الإنماء العقارية (ش.م.ك.ع) في دولة الكويت في عام 1993."
+  }
+  
