--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -1,8 +1,10 @@
 {
+    "home":"الرئيسية",
     "about": "حول",
     "board_of_directors": "مجلس الإدارة",
     "management": "الإدارة",
     "executive": "التنفيذي",
+    "our-story": "قصةنا",
     "govt_bots": "البوتات الحكومية",
     "services": "الخدمات",
     "corporate_governance": "حوكمة الشركات",
@@ -26,9 +28,77 @@
     "location": "الموقع",
     "phone": "هاتف",
     "email": "البريد الإلكتروني",
+    "Address": "العنوان",
     "address": "شارع عبد الله المبارك، برج الإنماء، مدينة الكويت",
     "follow_us": "تابعنا على:",
     "copyright_text": "حقوق النشر © 2024 شركة الإنماء العقارية. جميع الحقوق محفوظة | مدعوم من حلول أناثوث لتكنولوجيا المعلومات",
-    "company_description": "تم تسجيل ودمج شركة الإنماء العقارية (ش.م.ك.ع) في دولة الكويت في عام 1993."
-  }
-  
+    "company_description": "تم تسجيل ودمج شركة الإنماء العقارية (ش.م.ك.ع) في دولة الكويت في عام 1993.",
+    "read_more":"اقرأ المزيد",
+    "mainservice-subtitle":"تحقيق التميز في مجال العقارات",
+    "mainservice-title":"لتوفير مستوى متميز من الخدمات والمنتجات لعملائنا",
+    "blog_title":"الأخبار والرؤى المميزة",
+    "blog_subtitle":"تحديث مدونتنا",
+    "Category": "الفئة",
+    "latest_posts":"احدث المنشورات",
+    "tags":"الوسوم",
+    "banner-title":"تعظيم القيمة من خلال المعرفة والتكنولوجيا والابتكار في شركة الإنماء العقارية",
+
+
+
+
+    "Complaint-title":"ارسل لنا رسالة",
+    "Complaint-subtitle":"نحن نقدم لك ملاحظاتك. يمكنك تقديم شكوى او",
+    "Description-form":"وصف شكواك أو اقتراحاتك",
+    "Contact-Number":"رقم الاتصال",
+    "Civil-ID":"رقم الهوية الوطنية",
+    "First-Name":"الاسم الأول",
+    "Last-Name":"الاسم الأخير",
+    "Phone-Number":"رقم الهاتف",
+    "submit":"ارسال",
+    "Please-select":"الرجاء التحديد",
+    "complaint-contact-tittle":"كيف يمكننا مساعدتك؟",
+
+    "Position-Applying-for":"الوظيفة المتقدم عليها",
+    "Full-Name":"الاسم الكامل",
+    "Gender":"الجنس",
+   "Passport-Number":"رقم جواز السفر",
+   "Select-Nationality" :"اختر الجنسية",
+   "Degree-Level":"مستوى الدرجة",
+   "Career-Level":"المستوى الوظيفي",
+   "Briefly-describe-your-last-job-duties":"صف بإيجاز واجباتك الوظيفية الأخيرة",
+   "If-Any-Additional-Information":"إذا كان هناك أي معلومات إضافية",
+  "Upload-Your-Resume":"قم بتحميل سيرتك الذاتية (pdf أو docx فقط)",
+  "read-more":"اقرأ المزيد",
+  "more-services":"مزيد من الخدمات",
+
+
+
+  "form-title1":"ارسل لنا رسالة",
+  "form-subtitle":"لن يتم نشر عنوان بريدك الإلكتروني. الحقول المطلوبة مشار إليها *",
+  "Contact-us":"اتصل بنا",
+  "message":"رسالتك",
+   "contact-subtitle":"تواصل معنا بخصوص أي أسئلة أو متطلبات لديك. نحن ملتزمون بتقديم خدمة سريعة ومفيدة.",
+  "contact-title":"كيف يمكننا مساعدتك؟",
+
+
+
+  "mission-subtitle": "ريادة التميز في خدمات العقارات",
+  "mission-title": "مهمتنا ورؤيتنا",
+  "mission-description": "نحن نسعى لأن نكون شريكًا موثوقًا به، ونوفر حلولًا مستدامة ونضع معايير جديدة في تطوير العقارات والاستثمار. هدفنا هو تقديم خدمات ومنتجات متميزة، وزيادة الأرباح من خلال دمج المعرفة والتكنولوجيا والابتكار. برؤية أن نصبح الخيار الأول في قطاعي العقارات وخدمات الأمن، نحن ملتزمون بتحقيق أعلى المعايير الممكنة وتجاوز توقعات عملائنا.",
+  "mission": "المهمة",
+  "vision": "الرؤية",
+  "mission-text":"أن نتطور كشريك موثوق به في إدارة الممتلكات والخدمات الأمنية، لتطوير حلول إدارة الممتلكات المستدامة، ومعايير جديدة في التطوير والاستثمارات العقارية، لتوفير مستوى متميز من الخدمات والمنتجات لعملائنا، وتعظيم الربح من خلال الجمع بين المعرفة والتكنولوجيا، و الابتكار في كافة مجالات العقارات",
+  "vision-text":"أن نصبح الشريك الأول للخدمات العقارية والأمنية وأن نحقق أعلى المعايير الممكنة في القطاع العقاري",
+  "Diverse-Properties": "الممتلكات الأنسبة",
+  "Trusted-Solutions":"الحلول الموثوقة",
+  "Trusted-Solutions-Description":"مصدرك الموثوق للخدمات العقارية والأمنية الرائدة، مما يضمن الرضا وتحقيق أعلى معايير الصناعة. ",
+
+"Change-language":"Change Language to",
+
+"Blog":"مدونة",
+"Blog-Description":"مصدرك الموثوق للخدمات العقارية والأمنية الرائدة، مما يضمن الرضا وتحقيق أعلى معايير الصناعة.",
+"chief-executive-officer":"الرئيس التنفيذي",
+"chief-executive-officer-name":"عبد العزيز مفلق العصيمي",
+"language":"لغة"
+ }
+   
